# lottery

./: .gitignore  Cargo.toml  README.md  README_pl.md  config.toml
host/: home.html  lottery.html
src/: config.rs  frontend.html  frontend.rs  http_service.rs  lottery.html  main.rs  pdf.rs  test_names.htm
src/names/: demo.rs  html.rs  mod.rs
ui/: appwindow.slint
