[package]
name = "lottery"
version = "0.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
config = "0.13.4"
url = "2.5.0"
serde_json = "1.0.111"
html_parser = "0.7.0"
slint = "1.6"
rand = "0.8.5"
chrono = "0.4.38"

[build-dependencies]
slint-build = "1.6"
