[package]
name = "lottery"
version = "0.2.3"
edition = "2021"
include = [
    "**/*.slint",
    "**/*.rs",
    "src/test_names.htm",
    "config.toml"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.4"
html_parser = "0.7.0"
slint = "1.6"
rand = "0.8.5"
chrono = "0.4.38"

[build-dependencies]
slint-build = "1.6"

[features]
demo = []

default = []
